--- a/react-tutorial-master/public/index.html
+++ b/react-tutorial-master/public/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>React Tutorial</title>
-    <!-- Not present in the tutorial. Just for basic styling. -->
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700|Roboto:400,400i,700" rel="stylesheet"> 
     <link rel="stylesheet" href="css/base.css" />
+
     <script src="https://npmcdn.com/react@15.3.0/dist/react.js"></script>
     <script src="https://npmcdn.com/react-dom@15.3.0/dist/react-dom.js"></script>
     <script src="https://npmcdn.com/babel-core@5.8.38/browser.min.js"></script>
@@ -65,12 +67,11 @@
                 value={this.state.author}
                 onChange={this.handleAuthorChange}
               />
-              <input
-                type="text"
+              <textarea
                 placeholder="Say something..."
                 value={this.state.text}
-                onChange={this.handleTextChange}
-              />
+                onChange={this.handleTextChange}>
+              </textarea>
               <input type="submit" value="Post" />
             </form>
           );
