--- a/react-tutorial-master/public/index.html
+++ b/react-tutorial-master/public/index.html
@@ -16,10 +16,7 @@
   <body>
     <div id="content"></div>
     <script type="text/babel">
-      var data = [
-        {id: 1, author: "Pete Hunt", text: "This is one comment"},
-        {id: 2, author: "Jordan Walke", text: "This is *another* comment"}
-      ];
+      var nameSet = false;
 
       var CommentList = React.createClass({
         render: function() {
@@ -56,7 +53,9 @@
             return;
           }
           this.props.onCommentSubmit({author: author, text: text});
-          this.setState({author: '', text: ''});
+          this.setState({author: author, text: ''});
+
+          nameSet = true;
         },        
         render: function() {
           return (
@@ -66,6 +65,7 @@
                 placeholder="Your name"
                 value={this.state.author}
                 onChange={this.handleAuthorChange}
+                disabled={nameSet}
               />
               <textarea
                 placeholder="Say something..."
